# nornikel_hack

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
app/: Dockerfile
app/app/: config.py  main.py
app/app/routes/: upload.py
client/:  tailwind.config  .prettierrc.json  Dockerfile  app.config.ts  eslint.config.js  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/layouts/: default.vue
client/pages/: index.vue
client/server/api/: answer.json  data.json  files.delete.ts  files.get.ts  files.json  files.ts  query.ts  upload.ts
client/shared-types/: answer.ts  files.ts  index.ts
client/src/app/assets/scss/: main.scss
client/src/app/layouts/: default.vue
client/src/app/routes/: index.vue
client/src/entities/answer/: index.ts
client/src/entities/answer/api/: index.ts  requests.ts  types.ts
client/src/entities/answer/model/: store.ts
client/src/entities/files/: index.ts
client/src/entities/files/api/: requests.ts
client/src/entities/files/model/: store.ts
client/src/features/files/: index.ts
client/src/features/files/list/: index.ts
client/src/features/files/list/model/: useModel.ts
client/src/features/files/list/ui/: File.vue  FileList.vue
client/src/features/files/ui/: File.vue  FileList.vue
client/src/features/files/upload/: index.ts
client/src/features/files/upload/model/: useModel.ts
client/src/features/files/upload/ui/: Form.vue  Upload.vue
client/src/features/search/: index.ts
client/src/features/search/model/: useModel.ts
client/src/features/search/ui/: AnswerContent.vue  SearchDocs.vue
client/src/features/theme-toggle/: index.ts
client/src/features/theme-toggle/ui/: ThemeToggle.vue
client/src/pages/home/ui/: HomePage.vue
client/src/shared/icons/: DocIcon.vue  ImageIcon.vue  PdfIcon.vue  index.ts
client/src/widgets/header/: index.ts
client/src/widgets/header/ui/: VHeader.vue
client/src/widgets/sidebar/ui/: Sidebar.vue
server/: Dockerfile  config.py  pyproject.toml  requirements-base.txt  requirements.txt
server/app/: main.py
server/app/routes/: files.py  query.py  upload.py
server/data/: database.db
server/example_docs_for_test/: 2.docx
server/src/: api_clients.py  audio.py  database.py  image.py  processing.py  rag.py  text.py  vector_store.py  vectorization.py  weaviate_database.py
server/tests/: test_text.py  test_weaviate_database.py
