[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.8.3",
    "fastapi==0.115.5",
    "fastembed>=0.4.2",
    "pytest>=8.3.4",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.19",
    "uvicorn==0.32.1",
]
