[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "attrs==24.2.0",
    "authlib==1.3.1",
    "beautifulsoup4==4.12.3",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "coloredlogs==15.0.1",
    "cryptography==44.0.0",
    "deepsearch-glm==0.26.2",
    "docling-core==2.8.0",
    "docling-ibm-models==2.0.7",
    "docling-parse==2.1.2",
    "docling==2.8.3",
    "docutils==0.21.2",
    "easyocr==1.7.2",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.2.2",
    "faiss-cpu==1.9.0.post1",
    "fastapi==0.115.5",
    "fastembed==0.4.2",
    "filelock==3.16.1",
    "filetype==1.2.0",
    "flatbuffers==24.3.25",
    "fsspec==2024.10.0",
    "grpcio-health-checking==1.68.1",
    "grpcio-tools==1.68.1",
    "grpcio==1.68.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.27.0",
    "huggingface-hub==0.26.5",
    "humanfriendly==10.0",
    "idna==3.10",
    "imageio==2.36.1",
    "iniconfig==2.0.0",
    "jinja2==3.1.4",
    "jsonlines==3.1.0",
    "jsonref==1.1.0",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "lazy-loader==0.4",
    "loguru==0.7.3",
    "lxml==5.3.0",
    "markdown-it-py==3.0.0",
    "marko==2.1.2",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mmh3==4.1.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "ninja==1.11.1.2",
    "nltk==3.9.1",
    "numpy==2.1.3",
    "onnx==1.17.0",
    "onnxruntime==1.19.2",
    "openai==1.57.0",
    "opencv-python-headless==4.10.0.84",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pluggy==1.5.0",
    "protobuf==5.29.1",
    "py-rust-stemmers==0.1.3",
    "pyclipper==1.3.0.post6",
    "pycparser==2.22",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.6.1",
    "pydantic==2.9.2",
    "pygments==2.18.0",
    "pypdfium2==4.30.0",
    "pytest==8.3.4",
    "python-bidi==0.6.3",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.19",
    "python-pptx==1.0.2",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "rtree==1.3.0",
    "scikit-image==0.24.0",
    "scipy==1.14.1",
    "sentence-transformers==3.3.1",
    "setuptools==75.6.0",
    "shapely==2.0.6",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "starlette==0.41.3",
    "sympy==1.13.1",
    "tabulate==0.9.0",
    "tifffile==2024.9.20",
    "tokenizers==0.21.0",
    "tomli==2.2.1",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
    "typer==0.12.5",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "uvicorn==0.32.1",
    "validators==0.34.0",
    "weaviate-client==4.9.6",
    "xlsxwriter==3.2.0",
]
